fix horizontal scroll, add responsive footer

--- a/css/style.scss
+++ b/css/style.scss
@@ -44,7 +44,6 @@
   }
 }
 
-//HEADER
 header {
   background: #c11915 url("../images/header_bg.jpg") top center/100% no-repeat;
   position: relative;
@@ -63,7 +62,6 @@ header {
 
   .navbar {
     padding: 40px 30px 10px;
-    //padding: 55px 55px 15px;
   }
 
   .navbar-brand {
@@ -197,25 +195,6 @@ header {
   }
 }
 
-//VIDEO
-.video {
-  @include max-screen(767px) {
-    background: url('../images/newslatter-bg.jpg') top center/100% round;
-  }
-  .player {
-    position: relative;
-    padding-bottom: 56.25%;
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-
-//BANNER
 .banner {
   position: relative;
   z-index: 1;
@@ -314,7 +293,25 @@ header {
   }
 }
 
-//SPECIALS
+.video {
+  @include max-screen(767px) {
+    background: url('../images/newslatter-bg.jpg') top center/100% round;
+  }
+
+  .player {
+    position: relative;
+    padding-bottom: 56.25%;
+
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 .specials {
   background: url('../images/specials-bg.jpg') center/cover no-repeat;
   padding: 55px 0 75px;
@@ -322,7 +319,7 @@ header {
     padding: 40px 0 40px;
   }
   @include max-screen(575px) {
-    padding: 20px 0;
+    padding: 20px 9%;
   }
 
   .spec-item {
@@ -342,8 +339,7 @@ header {
       }
       &:nth-child(2) {
         flex-direction: row-reverse;
-        position: relative;
-        right: 9%;
+
         .spec-item_inner {
           margin-left: 3px;
         }
@@ -356,8 +352,6 @@ header {
       }
       &:first-of-type,
       &:last-of-type {
-        position: relative;
-        left: 9%;
         .spec-item_inner {
           margin-right: 3px;
         }
@@ -410,7 +404,6 @@ header {
   }
 }
 
-//WINE
 .wine {
   background: url('../images/bring-block-bg.jpg') center center/cover no-repeat;
   padding: 10% 0;
@@ -583,52 +576,217 @@ header {
   }
 }
 
-
-//FOOTER
 footer {
-  background-color: #000;
-  //padding: 30px;
+  background: url('../images/footer_bg.jpg') center/cover no-repeat;
   color: white;
-  padding-top: 100px;
-  padding-bottom: 70px;
+  padding: 100px 0 70px;
+  @include max-screen(991px) {
+    padding: 70px 0 50px;
+  }
+  @include max-screen(767px) {
+    padding: 30px 0;
+  }
+  @include max-screen(575px) {
+    padding: 15px 0;
+  }
 
   .footer-el {
+    &.map {
+      position: relative;
+      &:before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: url(../images/footer_vector-obj.png) no-repeat right top;
+        background-size: 34% auto;
+        top: -49px;
+        left: 27px;
+        @include max-screen(1199px) {
+          background-size: 31% auto;
+          top: -32px;
+          left: 17px;
+        }
+        @include max-screen(991px) {
+          display: none;
+        }
+      }
+      @include max-screen(991px) {
+        min-height: 250px;
+      }
+      @include max-screen(767px) {
+        min-height: 215px;
+      }
+      @include max-screen(575px) {
+        min-height: 170px;
+      }
+      iframe {
+        border: 5px solid #b21713;
+        @include max-screen(767px) {
+          border-width: 4px;
+        }
+      }
+    }
+
+
     h3 {
       font-family: "Great Vibes";
       font-weight: 400;
       font-size: 80px;
       color: #ff5656;
+      @include max-screen(1199px) {
+        font-size: 70px;
+      }
+      @include max-screen(575px) {
+        font-size: 50px;
+      }
     }
 
     h4 {
       font-family: "Source Sans Pro";
-      font-family: normal;
+      font-weight: 400;
       font-size: 12px;
-    }
-
-    .timework {
-      span {
-        min-width: 31px;
-        display: inline-block;
+      margin-bottom: 8px;
+      @include max-screen(575px) {
+        font-size: 14px;
+        margin-bottom: 5px;
       }
     }
 
-    &:last-child {
+    &:nth-child(2) {
+      .footer-info {
+        line-height: 0.8;
+
+        .info_left {
+          ul {
+            li {
+              font-size: 10px;
+              margin-bottom: 5px;
+              @include max-screen(575px) {
+                font-size: 11px;
+              }
+
+              span:first-of-type {
+                min-width: 25px;
+                display: inline-block;
+                text-align: left;
+              }
+
+              span:last-of-type {
+                padding-left: 5px;
+              }
+            }
+          }
+        }
+
+        .info_right {
+          p {
+            padding-left: 4px;
+            @include max-screen(575px) {
+              padding-left: 0;
+            }
+
+            &:first-of-type {
+              font-size: 26px;
+              font-family: "Source Sans Pro";
+              font-weight: 400;
+              margin-bottom: 8px;
+              @include max-screen(575px) {
+                font-size: 24px;
+                margin-bottom: 1rem;
+              }
+            }
+
+            &:last-of-type {
+              font-family: 'Source Sans Pro';
+              font-weight: 400;
+              font-size: 10px;
+              line-height: 13px;
+              @include max-screen(575px) {
+                font-size: 13px;
+                line-height: 14px;
+                text-decoration: underline;
+              }
+            }
+          }
+        }
+      }
+
+      .follow-us {
+        a {
+          width: 55px;
+          height: 55px;
+          display: inline-block;
+          background-color: #fff;
+          border-radius: 50%;
+          line-height: 55px;
+          margin: 0 8px 0;
+          text-decoration: none;
+          color: #414141;
+          font-size: 26px;
+          font-family: "Font Awesome 5 Brands";
+          font-weight: 900;
+          @include max-screen(767px) {
+            margin: 0 15px 0;
+          }
+          @include max-screen(575px) {
+            margin: 0 20px 0;
+            width: 47px;
+            height: 47px;
+            line-height: 47px;
+            font-size: 20px;
+          }
+
+          &:after {
+            content: "\f39e";
+            display: block;
+          }
+
+          &:nth-child(2):after {
+            content: "\f16d";
+          }
+
+          &:last-of-type:after {
+            content: "\f167";
+          }
+        }
+      }
+    }
+
+
+    &:nth-child(3) {
       border-left: 3px #ffffff dotted;
+      @include max-screen(767px) {
+        border: none;
+      }
 
       li {
-        padding-top: 15px;
         padding-left: 30px;
+        @include max-screen(767px) {
+          padding-left: 0;
+        }
 
         a {
           color: white;
           text-decoration: none;
-          font-size: 17px;
+          font-size: 16px;
           font-family: "Source Sans Pro";
-          font-family: normal;
+          font-weight: 400;
+          @include max-screen(767px) {
+            font-size: 14px;
+            padding-bottom: 2px;
+            border-bottom: 2px solid white;
+          }
+          @include max-screen(575px) {
+            padding-bottom: 1px;
+            border-width: 1px;
+            font-size: 10px;
+          }
         }
       }
     }
 
   }
+
 }
